[package]
name = "bench"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
hdrhistogram = { workspace = true }
noq = { package = "noq", path = "../noq", features = ["ring"] }
rcgen = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[features]
default = []

# Use private Apple APIs to send multiple packets in a single syscall.
fast-apple-datapath = ["noq/fast-apple-datapath"]
