[package]
name = "noq-proto"
version = "0.15.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "State machine for the QUIC transport protocol"
keywords.workspace = true
categories.workspace = true
workspace = ".."

[features]
# NOTE: Please keep this in sync with the feature list in `.github/workflows/codecov.yml`, see
# comment in that file for more information.
default = ["rustls", "ring", "tracing-log", "bloom"]
arbitrary = ["dep:arbitrary"]
# Enables conveniences like `EndpointConfig::default`, and together with
# enabling the `rustls` feature, this also enables the `aws-lc-rs` crypto provider
# for the rustls TLS backend, making `Endpoint::client` and `Endpoint::server` available,
# except when compiling to Wasm.
# If both `aws-lc-rs` and `ring` are enabled, `ring` will actually be used.
aws-lc-rs = ["dep:aws-lc-rs", "aws-lc-rs?/aws-lc-sys", "aws-lc-rs?/prebuilt-nasm", "rustls?/aws-lc-rs"] # TODO: Once released, we'll want to depend on the rustls-aws-lc-rs crate instead of rustls' aws-lc-rs feature.
aws-lc-rs-fips = ["aws-lc-rs", "aws-lc-rs?/fips"]
# Enables conveniences like `EndpointConfig::default`, and together with
# enabling the `rustls` feature, this also enables the `ring` crypto provider
# for the rustls TLS backend, making `Endpoint::client` and `Endpoint::server` available,
# except when compiling to Wasm.
# If both `aws-lc-rs` and `ring` are enabled, `ring` will actually be used.
ring = ["dep:ring", "rustls?/ring"] # TODO: Once released, we'll want to depend on the rustls-ring crate instead of rustls' ring feature.
# Enables BloomTokenLog, and uses it by default
bloom = ["dep:fastbloom"]
# Enables rustls as the TLS implementation backend
rustls = ["dep:rustls"]
# Provides `ClientConfig::with_platform_verifier()` convenience method
platform-verifier = ["dep:rustls-platform-verifier"]
# Configure `tracing` to log events via `log` if no `tracing` subscriber exists.
tracing-log = ["tracing/log"]
# Enable rustls logging
rustls-log = ["rustls?/logging"]
# Enable qlog support
qlog = ["dep:qlog"]
bench = ["dep:criterion"]

# Internal (PRIVATE!) features used to aid testing.
# Don't rely on these whatsoever. They may disappear at any time.

__rustls-post-quantum-test =  []

[dependencies]
arbitrary = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, optional = true }
bytes = { workspace = true }
criterion = { workspace = true, optional = true }
fastbloom = { workspace = true, optional = true }
identity-hash = { workspace = true }
lru-slab = { workspace = true }
qlog = { workspace = true, optional = true }
rustc-hash = { workspace = true }
rand = { workspace = true }
ring = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-platform-verifier = { workspace = true, optional = true }
slab = { workspace = true }
sorted-index-buffer = { workspace = true }
thiserror = { workspace = true }
tinyvec = { workspace = true, features = ["alloc"] }
tracing = { workspace = true }
derive_more = { version = "2.1.0", features = ["debug", "deref", "deref_mut", "display", "from"] }
enum-assoc = "1.3.0"
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"] }

# Feature flags & dependencies for wasm
# wasm-bindgen is assumed for a wasm*-*-unknown target
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
ring = { workspace = true, features = ["wasm32_unknown_unknown_js"] }
getrandom = { workspace = true, features = ["wasm_js"] }
rustls-pki-types = { workspace = true, features = ["web"] } # only added as dependency to enforce the `web` feature for this target
web-time = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
hex-literal = { workspace = true  }
proptest = { workspace = true }
rand_pcg = "0.9"
rcgen = { workspace = true }
test-strategy = { workspace = true }
testresult = "0.4.1"
tracing-subscriber = { workspace = true }
wasm-bindgen-test = { workspace = true }

[[bench]]
name = "send_buffer"
harness = false
required-features = ["bench"]

[lints]
workspace = true

[package.metadata.docs.rs]
# all non-default features except fips (cannot build on docs.rs environment)
features = ["aws-lc-rs", "rustls-aws-lc-rs", "rustls-ring", "platform-verifier", "rustls-log", "qlog", "bench"]
