[package]
name = "noq-udp"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "UDP sockets with ECN information for the QUIC transport protocol"
keywords.workspace = true
categories.workspace = true
workspace = ".."

[features]
# NOTE: Please keep this in sync with the feature list in `.github/workflows/codecov.yml`, see
# comment in that file for more information.
default = ["tracing", "tracing-log"]
# Configure `tracing` to log events via `log` if no `tracing` subscriber exists.
tracing-log = ["tracing/log"]
log = ["dep:log"]
# Use private Apple APIs to send multiple packets in a single syscall.
fast-apple-datapath = []

[dependencies]
libc = "0.2.175"
log = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
socket2 = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net"] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { workspace = true, features = ["Win32_System_LibraryLoader"] }

[build-dependencies]
cfg_aliases = { workspace = true }

[lib]
# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bench]]
name = "throughput"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
