[package]
name = "iroh-quinn-proto"
version = "0.10.8"
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn"
description = "State machine for the QUIC transport protocol"
keywords = ["quic"]
categories = [ "network-programming", "asynchronous" ]
workspace = ".."

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "experimental" }

[features]
default = ["tls-rustls", "log"]
tls-rustls = ["rustls", "ring", "rustls-pki-types"]
# Provides `ClientConfig::with_native_roots()` convenience method
native-certs = ["rustls-native-certs"]
# Write logs via the `log` crate when no `tracing` subscriber exists
log = ["tracing/log"]
wasm = ["getrandom/js", "ring?/wasm32_unknown_unknown_js", "rustls-pki-types?/web", "dep:web-time"]

[dependencies]
arbitrary = { version = "1.0.1", features = ["derive"], optional = true }
bytes = "1"
rustc-hash = "1.1"
rand = "0.8"
ring = { version = "0.17", optional = true }
rustls = { git = "https://github.com/matheus23/rustls", branch = "0.21-wasm", default-features = false, features = ["quic"], optional = true }
rustls-native-certs = { version = "0.6", optional = true }
slab = "0.4"
thiserror = "1.0.21"
tinyvec = { version = "1.1", features = ["alloc"] }
tracing = "0.1.10"
getrandom = { version = "0.2", default-features = false }
rustls-pki-types = { version = "1.7", optional = true }
web-time = { version = "1", optional = true }

[dev-dependencies]
assert_matches = "1.1"
hex-literal = "0.4.0"
rcgen = "0.12.0"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
lazy_static = "1"
