[package]
name = "iroh-quinn-proto"
version = "0.11.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "State machine for the QUIC transport protocol"
keywords.workspace = true
categories.workspace = true
workspace = ".."

[package.metadata.docs.rs]
all-features = true

[features]
default = ["rustls", "log"]
rustls = ["dep:rustls", "ring", "dep:rustls-pki-types"]
ring = ["dep:ring"]
# Enable rustls ring provider and direct ring usage
# Provides `ClientConfig::with_platform_verifier()` convenience method
platform-verifier = ["dep:rustls-platform-verifier"]
# Configure `tracing` to log events via `log` if no `tracing` subscriber exists.
log = ["tracing/log"]
wasm = ["getrandom/js", "ring?/wasm32_unknown_unknown_js", "rustls-pki-types?/web", "dep:web-time"]

[dependencies]
arbitrary = { workspace = true, optional = true }
bytes = { workspace = true }
rustc-hash = { workspace = true }
rand = { workspace = true }
ring = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-platform-verifier = { workspace = true, optional = true }
slab = { workspace = true }
thiserror = { workspace= true }
tinyvec = { workspace = true, features = ["alloc"] }
tracing = { workspace = true }
getrandom = { workspace = true }
rustls-pki-types = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = { workspace = true }
hex-literal = { workspace = true  }
rcgen = { workspace = true }
tracing-subscriber = { workspace = true }
lazy_static = "1"

[lints.rust]
# https://rust-fuzz.github.io/book/cargo-fuzz/guide.html#cfgfuzzing
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
