[package]
name = "iroh-quinn-udp"
version = "0.4.1"
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn"
description = "UDP sockets with ECN information for the QUIC transport protocol"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]
workspace = ".."

[package.metadata.docs.rs]
all-features = true

[features]
default = ["log", "network"]
# Write logs via the `log` crate when no `tracing` subscriber exists
log = ["tracing/log"]
network = ["dep:socket2"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bytes = "1"
libc = "0.2.113"
socket2 = { version = "0.5", optional = true }
tracing = "0.1.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Networking_WinSock"] }
