[package]
name = "iroh-quinn-udp"
version = "0.5.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "UDP sockets with ECN information for the QUIC transport protocol"
keywords.workspace = true
categories.workspace = true
workspace = ".."

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tracing", "log", "network"]
# Configure `tracing` to log events via `log` if no `tracing` subscriber exists.
log = ["tracing/log"]
direct-log = ["dep:log"]
network = ["dep:socket2", "dep:libc"]

[dependencies]
libc = { version = "0.2.113", optional = true }
log = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
web-time = { workspace = true }

[target.'cfg(windows)'.dependencies]
once_cell = { workspace = true }
windows-sys = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.bench]
name = "throughput"
harness = false
